tests/it/wire/snapshots/it__wire__bedrock__auto_cache_places_cache_points_by_default.snap
---
source: tests/it/wire/bedrock.rs
expression: rendered
---
{
  "method": "POST",
  "path": "/model/anthropic.claude-sonnet-4-6/converse",
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "578"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "body": {
    "inferenceConfig": {
      "maxTokens": 128
    },
    "messages": [
      {
        "content": [
          {
            "text": "What is the capital of France?"
          },
          {
            "cachePoint": {
              "type": "default"
            }
          }
        ],
        "role": "user"
      },
      {
        "content": [
          {
            "text": "Paris."
          }
        ],
        "role": "assistant"
      },
      {
        "content": [
          {
            "text": "And of Spain?"
          }
        ],
        "role": "user"
      }
    ],
    "system": [
      {
        "text": "Keep it short."
      },
      {
        "cachePoint": {
          "type": "default"
        }
      }
    ],
    "toolConfig": {
      "tools": [
        {
          "toolSpec": {
            "description": "Reads the current weather for a city",
            "inputSchema": {
              "json": {
                "properties": {
                  "city": {
                    "type": "string"
                  }
                },
                "required": [
                  "city"
                ],
                "type": "object"
              }
            },
            "name": "get_weather"
          }
        },
        {
          "cachePoint": {
            "type": "default"
          }
        }
      ]
    }
  }
}
