tests/it/wire/snapshots/it__wire__bedrock__classifies_provider_failures.snap
---
source: tests/it/wire/bedrock.rs
expression: rendered
---
[
  {
    "status": 401,
    "error": {
      "kind": "authentication",
      "message": "provider bedrock The security token included in the request is invalid.",
      "provider": "bedrock",
      "status": 401,
      "provider_code": "UnrecognizedClientException",
      "retry": {
        "type": "never"
      },
      "raw_data": {
        "__type": "UnrecognizedClientException",
        "message": "The security token included in the request is invalid."
      }
    }
  },
  {
    "status": 403,
    "error": {
      "kind": "access_denied",
      "message": "provider bedrock You do not have access to the model with the specified model ID.",
      "provider": "bedrock",
      "status": 403,
      "provider_code": "AccessDeniedException",
      "retry": {
        "type": "never"
      },
      "raw_data": {
        "__type": "com.amazon.bedrock#AccessDeniedException",
        "Message": "You do not have access to the model with the specified model ID."
      }
    }
  },
  {
    "status": 429,
    "error": {
      "kind": "rate_limit",
      "message": "provider bedrock Too many requests, please wait before trying again.",
      "provider": "bedrock",
      "status": 429,
      "provider_code": "ThrottlingException",
      "retry": {
        "type": "safe"
      },
      "raw_data": {
        "__type": "com.amazon.bedrock#ThrottlingException",
        "message": "Too many requests, please wait before trying again."
      }
    }
  },
  {
    "status": 429,
    "error": {
      "kind": "quota_exceeded",
      "message": "provider bedrock Your request rate exceeds the service quota for your account.",
      "provider": "bedrock",
      "status": 429,
      "provider_code": "ServiceQuotaExceededException",
      "retry": {
        "type": "never"
      },
      "raw_data": {
        "__type": "com.amazon.bedrock#ServiceQuotaExceededException",
        "message": "Your request rate exceeds the service quota for your account."
      }
    }
  },
  {
    "status": 400,
    "error": {
      "kind": "invalid_request",
      "message": "provider bedrock The value at toolConfig.tools failed to satisfy the constraint.",
      "provider": "bedrock",
      "status": 400,
      "provider_code": "ValidationException",
      "retry": {
        "type": "never"
      },
      "raw_data": {
        "__type": "com.amazon.bedrock#ValidationException",
        "message": "The value at toolConfig.tools failed to satisfy the constraint."
      }
    }
  },
  {
    "status": 404,
    "error": {
      "kind": "not_found",
      "message": "provider bedrock Could not resolve the foundation model from the provided model id.",
      "provider": "bedrock",
      "status": 404,
      "provider_code": "ResourceNotFoundException",
      "retry": {
        "type": "never"
      },
      "raw_data": {
        "__type": "com.amazon.bedrock#ResourceNotFoundException",
        "message": "Could not resolve the foundation model from the provided model id."
      }
    }
  },
  {
    "status": 500,
    "error": {
      "kind": "server",
      "message": "provider bedrock An internal server error occurred.",
      "provider": "bedrock",
      "status": 500,
      "provider_code": "InternalServerException",
      "retry": {
        "type": "safe"
      },
      "raw_data": {
        "__type": "com.amazon.bedrock#InternalServerException",
        "message": "An internal server error occurred."
      }
    }
  }
]
