tests/it/wire/snapshots/it__wire__bedrock__counts_input_tokens_through_the_native_endpoint.snap
---
source: tests/it/wire/bedrock.rs
expression: rendered
---
{
  "method": "POST",
  "path": "/model/anthropic.claude-sonnet-4-6/count-tokens",
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "316"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "body": {
    "input": {
      "converse": {
        "messages": [
          {
            "content": [
              {
                "text": "What is the capital of France?"
              },
              {
                "cachePoint": {
                  "type": "default"
                }
              }
            ],
            "role": "user"
          },
          {
            "content": [
              {
                "text": "Paris."
              }
            ],
            "role": "assistant"
          },
          {
            "content": [
              {
                "text": "And of Spain?"
              }
            ],
            "role": "user"
          }
        ],
        "system": [
          {
            "text": "Keep it short."
          },
          {
            "cachePoint": {
              "type": "default"
            }
          }
        ]
      }
    }
  }
}
