tests/it/wire/snapshots/it__wire__bedrock__decodes_a_tool_call_response.snap
---
source: tests/it/wire/bedrock.rs
expression: rendered
---
{
  "id": null,
  "model": {
    "provider": "bedrock",
    "model": "sonnet"
  },
  "content": [
    {
      "type": "text",
      "text": "Looking that up."
    },
    {
      "type": "tool_call",
      "id": "tooluse_paris",
      "name": "get_weather",
      "arguments": {
        "city": "Paris"
      },
      "kind": "function"
    }
  ],
  "finish_reason": "tool_call",
  "usage": {
    "input": 40,
    "output": 22,
    "reasoning": 0,
    "cache_read": 0,
    "cache_write": 0
  },
  "raw": {
    "output": {
      "message": {
        "content": [
          {
            "text": "Looking that up."
          },
          {
            "toolUse": {
              "input": {
                "city": "Paris"
              },
              "name": "get_weather",
              "toolUseId": "tooluse_paris"
            }
          }
        ],
        "role": "assistant"
      }
    },
    "stopReason": "tool_use",
    "usage": {
      "inputTokens": 40,
      "outputTokens": 22,
      "totalTokens": 62
    }
  }
}
