tests/it/wire/snapshots/it__wire__bedrock__encodes_a_tool_round_trip-2.snap
---
source: tests/it/wire/bedrock.rs
expression: rendered
---
{
  "id": null,
  "model": {
    "provider": "bedrock",
    "model": "sonnet"
  },
  "content": [
    {
      "type": "text",
      "text": "Hello."
    }
  ],
  "finish_reason": "stop",
  "usage": {
    "input": 12,
    "output": 7,
    "reasoning": 0,
    "cache_read": 0,
    "cache_write": 0
  },
  "raw": {
    "output": {
      "message": {
        "role": "assistant",
        "content": [
          {
            "text": "Hello."
          }
        ]
      }
    },
    "stopReason": "end_turn",
    "usage": {
      "inputTokens": 12,
      "outputTokens": 7,
      "totalTokens": 19
    }
  }
}
