tests/it/wire/snapshots/it__wire__bedrock__encodes_a_tool_round_trip.snap
---
source: tests/it/wire/bedrock.rs
expression: rendered
---
{
  "method": "POST",
  "path": "/model/anthropic.claude-sonnet-4-6/converse",
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "856"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "body": {
    "messages": [
      {
        "role": "user",
        "content": [
          {
            "text": "What is the weather in Paris and Madrid?"
          },
          {
            "cachePoint": {
              "type": "default"
            }
          }
        ]
      },
      {
        "role": "assistant",
        "content": [
          {
            "text": "Looking both up."
          },
          {
            "toolUse": {
              "toolUseId": "call_paris",
              "name": "get_weather",
              "input": {
                "city": "Paris"
              }
            }
          },
          {
            "toolUse": {
              "toolUseId": "call_madrid",
              "name": "get_weather",
              "input": {
                "city": "Madrid"
              }
            }
          }
        ]
      },
      {
        "role": "user",
        "content": [
          {
            "toolResult": {
              "toolUseId": "call_paris",
              "content": [
                {
                  "text": "18C and clear"
                }
              ]
            }
          },
          {
            "toolResult": {
              "toolUseId": "call_madrid",
              "content": [
                {
                  "text": "the city is unknown"
                }
              ],
              "status": "error"
            }
          }
        ]
      }
    ],
    "toolConfig": {
      "tools": [
        {
          "toolSpec": {
            "name": "get_weather",
            "description": "Reads the current weather for a city",
            "inputSchema": {
              "json": {
                "type": "object",
                "properties": {
                  "city": {
                    "type": "string"
                  }
                },
                "required": [
                  "city"
                ]
              }
            }
          }
        },
        {
          "cachePoint": {
            "type": "default"
          }
        }
      ]
    },
    "inferenceConfig": {
      "maxTokens": 128
    }
  }
}
