tests/it/wire/snapshots/it__wire__bedrock__encodes_every_tool_choice_mode.snap
---
source: tests/it/wire/bedrock.rs
expression: rendered
---
{
  "method": "POST",
  "path": "/model/anthropic.claude-sonnet-4-6/converse",
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "642"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "body": {
    "system": [
      {
        "text": "Use the tools when they help."
      },
      {
        "cachePoint": {
          "type": "default"
        }
      }
    ],
    "messages": [
      {
        "role": "user",
        "content": [
          {
            "text": "What is the weather in Paris?"
          }
        ]
      }
    ],
    "toolConfig": {
      "tools": [
        {
          "toolSpec": {
            "name": "get_weather",
            "description": "Reads the current weather for a city",
            "inputSchema": {
              "json": {
                "type": "object",
                "properties": {
                  "city": {
                    "type": "string"
                  }
                },
                "required": [
                  "city"
                ]
              }
            }
          }
        },
        {
          "toolSpec": {
            "name": "get_time",
            "description": "Reads the current time in a time zone",
            "inputSchema": {
              "json": {
                "type": "object",
                "properties": {
                  "zone": {
                    "type": "string"
                  }
                },
                "required": [
                  "zone"
                ]
              }
            }
          }
        },
        {
          "cachePoint": {
            "type": "default"
          }
        }
      ]
    },
    "inferenceConfig": {
      "maxTokens": 128
    }
  }
}
