tests/it/wire/snapshots/it__wire__bedrock__encodes_replayed_reasoning-2.snap
---
source: tests/it/wire/bedrock.rs
expression: rendered
---
{
  "id": null,
  "model": {
    "provider": "bedrock",
    "model": "sonnet"
  },
  "content": [
    {
      "type": "reasoning",
      "text": "97 has no divisor below 10.",
      "signature": "sig-def"
    },
    {
      "type": "reasoning",
      "text": "cmVkYWN0ZWQtcmVwbHk=",
      "redacted": true
    },
    {
      "type": "text",
      "text": "Yes, 97 is prime."
    }
  ],
  "finish_reason": "stop",
  "usage": {
    "input": 12,
    "output": 7,
    "reasoning": 0,
    "cache_read": 0,
    "cache_write": 0
  },
  "raw": {
    "output": {
      "message": {
        "content": [
          {
            "reasoningContent": {
              "reasoningText": {
                "signature": "sig-def",
                "text": "97 has no divisor below 10."
              }
            }
          },
          {
            "reasoningContent": {
              "redactedContent": "cmVkYWN0ZWQtcmVwbHk="
            }
          },
          {
            "text": "Yes, 97 is prime."
          }
        ],
        "role": "assistant"
      }
    },
    "stopReason": "end_turn",
    "usage": {
      "inputTokens": 12,
      "outputTokens": 7,
      "totalTokens": 19
    }
  }
}
